--- a/lib/css/settings.global.pcss
+++ b/lib/css/settings.global.pcss
@@ -17,7 +17,6 @@ $ts-1: 0.707rem;
 /* Grid */
 
 $gutter: 64px;
-
 @lost flexbox flex;
 @lost gutter 64px;
 
@@ -26,6 +25,6 @@ $narrow-container: 960px;
 
 /* Media Queries */
 
-$small: 1024px;
-$medium: 1024px;
-$desktop: 1024px;
+$asdf: 376px;
+$medium: 567px;
+$large: 1024px;
