--- a/lib/css/components.project.proreferral.pcss
+++ b/lib/css/components.project.proreferral.pcss
@@ -1,8 +1,12 @@
+/* Header Logo Color on Pro Referral Case */
+
 .Header--ProReferral.is-scrolled h1 { color: $pr-orange; }
+
+/* Case Study */
 
 .Project-hero--ProReferral::before {
     background: #fff url("../images/PR-Case-BG.jpg") no-repeat top center;
-    background-size: contain;
+    background-size: cover;
 }
 
 .Overview-siteLink--ProReferral {
@@ -24,18 +28,21 @@
 /* Pro Section Header */
 
 .PRPro {
-    background: url("../images/PR-Case-Show.jpg") no-repeat center;
-    background-size: cover;
     display: block;
-    size: 100% 50vr;
+    @mixin large {
+        background: url("../images/PR-Case-Show.jpg") no-repeat center;
+        background-size: cover;
+        size: 100% 50vr;
+    }
 
-    &-container { lost-center: $wide-container; }
+    &-container { lost-center: $wide-container 1rem; }
 
     &-title {
         color: #222;
         font-size: $ts4;
         line-height: 4vr;
-        lost-column: 1/3 1;
+        lost-column: 1;
+        @mixin large { lost-column: 1/3 1; }
 
         &--orange {
             color: $pr-orange;
@@ -43,11 +50,10 @@
         }
     }
 
-    &-description { lost-column: 1/2 0; }
+    &-description { @mixin large { lost-column: 1/2 0; } }
 }
 
 /* Pro App Section Header */
-
 
 .PRProApp {
     background: url("../images/ProReferral-Case-ProApp.jpg") no-repeat center;
@@ -72,70 +78,75 @@
 .PRProDashboard {
     align-items: flex-end;
 
-    &-title {
-        lost-move: 1/7;
-    }
+    &-title { @mixin large { lost-move: 1/7; } }
 
     &-description {
-        lost-column: 2/3 0;
-        lost-move: 1/7;
+        lost-column: 1;
+        @mixin large {
+            lost-column: 2/3 0;
+            lost-move: 1/7;
+        }
     }
+
     &-web {
         align-items: flex-start;
-        lost-column: 3/4;
-        lost-move: 1/12;
+        lost-column: 1;
+        @mixin large {
+            lost-column: 3/4;
+            lost-move: 1/12;
+        }
     }
+
     &-app {
+        display: none;
         lost-column: 1/5;
         lost-move: -1/12;
         transform:translateY(4vr);
-    }
-    &-list {
-        align-items: center;
-        lost-center: $wide-container;
-    }
-    &-mock { lost-column: 1/4 5; }
-    &-spacer {
-        display: flex;
-        justify-content: center;
-        lost-column: 1/8 5;
-    }
-    &-arrow {
-        size: 15%;
+        @mixin large { display: block; }
     }
 }
 
 .PRProAppTriage {
-    &-description { lost-column: 2/3 0; }
-    &-list { lost-center: $wide-container; }
+
+    &-description { @media large { lost-column: 2/3 0; } }
+    &-list { lost-center: $wide-container 1rem; }
+
     &-mock {
-        lost-column: 1/4;
-
-        &--followUp { lost-move: 1/8; }
-        &--pass { lost-move: 1/4; }
-
+        lost-column: 1;
+        @mixin medium { lost-column: 1/3; }
+        @mixin large {
+            lost-column: 1/4;
+            &--followUp { lost-move: 1/8; }
+            &--pass { lost-move: 1/4; }
+        }
     }
 }
-
 
 .PRProAppMessaging {
-    &-description { lost-column: 2/5 2; }
-    &-mock { lost-column: 3/5 2; }
+    @mixin large {
+        &-description { lost-column: 2/5 2; }
+        &-mock { lost-column: 3/5 2; }
+    }
 }
 
-
 .PRProAppStyleGuide {
-    &-description {
-        lost-move: 1/6;
-        lost-column: 2/3 0;
+    @mixin large {
+
+        &-description {
+            lost-column: 2/3 0;
+            lost-move: 1/6;
+        }
     }
 
     &-mock {
-        lost-column: 3/4;
-        lost-move: 1/8;
+        lost-column: 1;
         position: relative;
-
+        @mixin large {
+            lost-column: 3/4;
+            lost-move: 1/8;
+        }
     }
+
     &-screen {
         position: absolute;
         z-index: 1;
