Add global footer and home page tagline. Animation performance improvements through hardware accelerated transitions.

--- a/lib/css/elements.page.pcss
+++ b/lib/css/elements.page.pcss
@@ -1,6 +1,7 @@
 body {
     font: $ts0/1 $sans-serif;
     font-feature-settings: "kern", "liga";
+    -webkit-backface-visibility:hidden;
 }
 
 figcaption { font: 300 $ts0/1 $sans-serif; }
