--- a/lib/css/components.projectgrid.pcss
+++ b/lib/css/components.projectgrid.pcss
@@ -1,7 +1,7 @@
 .ProjectGrid {
     @mixin ui-list;
     lost-center: $wide-container;
-    margin-top: 7vr;
+    margin-top: 4vr;
 }
 
 .GridItem {
@@ -24,13 +24,13 @@
         z-index: 4;
         @mixin large {
             opacity: 0;
-            transform: translateY(100%);
+            transform: translate3d(0, 100%, 0);
         }
     }
 
     &:hover &-info {
         opacity: 1;
-        transform: translateY(0);
+        transform: translate3d(0, 0, 0);
     }
 
     &-title {
@@ -173,13 +173,13 @@
         background-size: contain;
         position: absolute 50% 50%;
         size: 32% 52%;
-        transform: translateX(-50%) translateY(-70%) scale(1.1);
+        transform: translate3d(-50%, -70%, 0) scale(1.1);
         transition: all 0.3s ease-out-quint;
         z-index: 2;
-        @mixin large { transform: translateX(-50%) translateY(-50%) scale(0.8); }
+        @mixin large { transform: translate3d(-50%, -50%, 0) scale(0.8); }
     }
 
-    &:hover &-logo { transform: translateX(-50%) translateY(-70%) scale(1.1); }
+    &:hover &-logo { transform: translate3d(-50%, -70%, 0) scale(1.1); }
 }
 
 .CFN {
@@ -194,18 +194,18 @@
         background: url("../images/CFN-Thumb-Logo.svg") no-repeat center;
         position: absolute 50% 50%;
         size: 60% 18%;
-        transform: translateX(-50%) translateY(-80%);
+        transform: translate3d(-50%, -80%, 0);
         transition: all 0.3s ease-out-quint;
         z-index: 3;
         @mixin large {
             opacity: 0.8;
-            transform: translateX(-50%) translateY(-50%);
+            transform: translate3d(-50%, -50%, 0);
         }
     }
 
     &:hover &-logo {
         opacity: 1;
-        transform: translateX(-50%) translateY(-80%);
+        transform: translate3d(-50%, -80%, 0);
     }
 
     &-scroller {
@@ -245,18 +245,18 @@
         background-size: contain;
         position: absolute 42% 0 0 21%;
         size: 4% 7%;
-        transform: translateX(-100%) translateY(-80%) scale(1);
+        transform: translate3d(-100%, -80%, 0) scale(1);
         transition: all 0.3s ease-out-back;
         z-index: 2;
         @mixin large {
             opacity: 0;
-            transform: translateX(-50%) translateY(-50%) scale(0.4);
+            transform: translate3d(-50%, -50%, 0) scale(0.4);
         }
     }
 
     &:hover &-star {
         opacity: 1;
-        transform: translateX(-100%) translateY(-80%) scale(1);
+        transform: translate3d(-100%, -80%, 0) scale(1);
     }
 
     &-tooltip {
@@ -264,18 +264,18 @@
         background-size: contain;
         position: absolute 50% 50%;
         size: 65% 38%;
-        transform: translateX(-43%) translateY(-46%);
+        transform: translate3d(-43%, -46%, 0);
         transition: all 0.3s ease-out-quint;
         z-index: 3;
         @mixin large {
             opacity: 0;
-            transform: translateX(-38%) translateY(-46%);
+            transform: translate3d(-38%, -46%, 0);
         }
     }
 
     &:hover &-tooltip {
         opacity: 1;
-        transform: translateX(-43%) translateY(-46%);
+        transform: translate3d(-43%, -46%, 0);
     }
 }
 
@@ -294,10 +294,10 @@
         background: #fff;
         position: absolute 50% 50%;
         size: 16% 25%;
-        transform: translateX(-190%) translateY(-50%);
+        transform: translate3d(-190%, -50%, 0);
         transition: all 0.3s ease-out-quint;
         z-index: 3;
-        @mixin large { transform: translateX(-50%) translateY(-50%); }
+        @mixin large { transform: translate3d(-50%, -50%, 0); }
     }
 
     &-logoMark {
@@ -315,12 +315,12 @@
         background-size: contain;
         position: absolute 50% 50%;
         size: 40% 20%;
-        transform: translateX(-25%) translateY(-50%);
+        transform: translate3d(-25%, -50%, 0);
         transition: all 0.3s ease-out-quint;
         z-index: 2;
         @mixin large {
             opacity: 0;
-            transform: translateX(-40%) translateY(-50%);
+            transform: translate3d(-40%, -50%, 0);
         }
     }
 
@@ -332,28 +332,28 @@
 
         position: absolute 1rem auto;
         text-align: center;
-        transform: translateY(0);
+        transform: translate3d(0, 0, 0);
         transition: all 0.3s ease-out-quint;
         width: 100%;
         z-index: 2;
         @mixin large {
             opacity: 0;
-            transform: translateY(10%);
+            transform: translate3d(0, 10%, 0);
         }
     }
     @mixin large {
         &:hover &-bg { filter: blur(1px) brightness(0.8); }
-        &:hover &-logoBlock { transform: translateX(-190%) translateY(-50%); }
-        &:hover &-logoMark { transform: translateX(-50%) translateY(-50%) rotate(-180deg); }
+        &:hover &-logoBlock { transform: translate3d(-190%, -50%, 0); }
+        &:hover &-logoMark { transform: translate3d(-50%, -50%, 0) rotate(-180deg); }
 
         &:hover &-logoType {
             opacity: 1;
-            transform: translateX(-25%) translateY(-50%);
+            transform: translate3d(-25%, -50%, 0);
         }
 
         &:hover &-placeholder {
             opacity: 1;
-            transform: translateY(0);
+            transform: translate3d(0, 0, 0);
         }
     }
 }
