--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -26,15 +26,18 @@ The Inverted Triangle
 @import "elements.headings.pcss";
 @import "elements.links.pcss";
 
-/* Ojbects: Unstyled Design Patterns */
+/* Objects: Unstyled Design Patterns */
+@import "objects.wrappers.pcss";
 
 /* Components: Designed & styled pieces of UI */
 @import "components.header.pcss";
+@import "components.tagline.pcss";
 @import "components.projectgrid.pcss";
 @import "components.project.pcss";
 @import "components.project.proreferral.pcss";
 @import "components.project.registration.pcss";
 @import "components.project.cfn.pcss";
 @import "components.project.macys.pcss";
+@import "components.footer.pcss";
 
 /* Trumps: Overrides, Helpers & Utilities - 1 DOM Element at a time */
