--- a/lib/css/settings.animations.pcss
+++ b/lib/css/settings.animations.pcss
@@ -59,6 +59,6 @@
     }
 }
 @keyframes CFN-Scroller {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-90%); }
+    0% { transform: translate3d(0, 0, 0); }
+    100% { transform: translate3d(-90%, 0, 0); }
 }
