--- a/lib/css/components.footer.pcss
+++ b/lib/css/components.footer.pcss
@@ -4,10 +4,12 @@
     lost-center: $wide-container;
     padding: 1vr 0;
 
-    &-legal,
-    &-links { lost-column: 1/2; }
+    &-legal { lost-column: 1/3 2 0; }
 
-    &-links { text-align: right; }
+    &-links {
+        lost-column: 2/3 2 0;
+        text-align: right;
+    }
 
     &-divider {
         color: #afafaf;
