--- a/lib/css/components.project.proreferral.pcss
+++ b/lib/css/components.project.proreferral.pcss
@@ -140,6 +140,7 @@
 
     &-mock {
         lost-column: 1;
+        padding-bottom: 25vr;
         position: relative;
         @mixin large {
             lost-column: 3/4;
