Rework image structure & build. Fix a permalink issue.

--- a/lib/css/components.project.macys.pcss
+++ b/lib/css/components.project.macys.pcss
@@ -1,7 +1,7 @@
 .Header--Macys.is-scrolled h1 { color: #e01a2b; }
 
 .Project-hero--Macys::before {
-    background: #fff url("../images/Macys-BG.jpg") no-repeat center;
+    background: #fff url("../images/macys/case/Hero-BG.jpg") no-repeat center;
     background-size: cover;
 }
 
@@ -51,7 +51,7 @@
 }
 
 .MacysPrototyping {
-    background: url("../images/Macys-Case-Prototyping.jpg") no-repeat left;
+    background: url("../images/macys/case/Prototyping.jpg") no-repeat left;
     background-size: cover;
     display: block;
     size: 100% 25vr;
