--- a/lib/css/components.project.proreferral.pcss
+++ b/lib/css/components.project.proreferral.pcss
@@ -5,7 +5,7 @@
 /* Case Study */
 
 .Project-hero--ProReferral::before {
-    background: #fff url("../images/PR-Case-BG.jpg") no-repeat top center;
+    background: #fff url("../images/proreferral/case/Hero-BG.jpg") no-repeat top center;
     background-size: cover;
 }
 
@@ -20,7 +20,7 @@
     }
 
     &::after {
-        background: #fff url("../images/ProReferral-CTA-Arrow.svg") no-repeat top center;
+        background: #fff url("../images/proreferral/case/CTA-Arrow.svg") no-repeat top center;
         background-size: contain;
     }
 }
@@ -30,7 +30,7 @@
 .PRPro {
     display: block;
     @mixin large {
-        background: url("../images/PR-Case-Show.jpg") no-repeat center;
+        background: url("../images/proreferral/case/Pro-BG.jpg") no-repeat center;
         background-size: cover;
         size: 100% 50vr;
     }
@@ -56,7 +56,7 @@
 /* Pro App Section Header */
 
 .PRProApp {
-    background: url("../images/ProReferral-Case-ProApp.jpg") no-repeat center;
+    background: url("../images/proreferral/case/ProApp-BG.jpg") no-repeat center;
     background-size: cover;
     size: 100% 25vr;
 
