--- a/lib/css/components.projectgrid.pcss
+++ b/lib/css/components.projectgrid.pcss
@@ -69,7 +69,7 @@
 
     &-bg {
         @mixin project-thumbnail-bg;
-        background: url("../images/ProReferral-Thumb-BG.jpg");
+        background: url("../images/proreferral/thumb/BG.jpg");
         background-size: cover;
         filter: brightness(0.8) blur(1px);
         @mixin large { filter: brightness(0.9) blur(0); }
@@ -78,7 +78,7 @@
     &:hover &-bg { filter: brightness(0.8) blur(1px); }
 
     &-device {
-        background: url("../images/ProReferral-Thumb-Device.png");
+        background: url("../images/proreferral/thumb/Device.png");
         background-size: cover;
         position: absolute 50% 50%;
         size: 35% 118%;
@@ -110,7 +110,7 @@
 
         &--1 {
             @mixin large { animation: In-PR-card-1 0.5s normal forwards ease-out; }
-            background: url("../images/ProReferral-Thumb-Card-1.png");
+            background: url("../images/proreferral/thumb/Card-1.png");
             background-size: cover;
             transform: translateX(30.7%) translateY(16.6%);
             z-index: 6;
@@ -118,7 +118,7 @@
 
         &--2 {
             @mixin large { animation: In-PR-card-2 0.5s normal forwards ease-out; }
-            background: url("../images/ProReferral-Thumb-Card-2.png");
+            background: url("../images/proreferral/thumb/Card-2.png");
             background-size: cover;
             transform: translateX(47%) translateY(16.6%) scale(0.9);
             z-index: 5;
@@ -126,7 +126,7 @@
 
         &--3 {
             @mixin large { animation: In-PR-card-3 0.5s normal forwards ease-out; }
-            background: url("../images/ProReferral-Thumb-Card-3.png");
+            background: url("../images/proreferral/thumb/Card-3.png");
             background-size: cover;
             transform: translateX(61%) translateY(16.6%) scale(0.8);
             z-index: 4;
@@ -134,7 +134,7 @@
 
         &--4 {
             @mixin large { animation: In-PR-card-4 0.5s normal forwards ease-out; }
-            background: url("../images/ProReferral-Thumb-Card-4.png");
+            background: url("../images/proreferral/thumb/Card-4.png");
             background-size: cover;
             opacity: 0.8;
             transform: translateX(72%) translateY(16.5%) scale(0.7);
@@ -156,7 +156,7 @@
     &-bg {
         @mixin project-thumbnail-bg;
         backface-visibility: hidden;
-        background: url("../images/Registration-BG.jpg");
+        background: url("../images/registration/thumb/BG.jpg");
         background-size: cover;
         perspective: 1000;
         transform: scale(1);
@@ -169,7 +169,7 @@
     }
 
     &-logo {
-        background: url("../images/Registration-Logo.svg") no-repeat center;
+        background: url("../images/registration/thumb/Logo.svg") no-repeat center;
         background-size: contain;
         position: absolute 50% 50%;
         size: 32% 52%;
@@ -191,7 +191,7 @@
     }
 
     &-logo {
-        background: url("../images/CFN-Thumb-Logo.svg") no-repeat center;
+        background: url("../images/cfn/thumb/Logo.svg") no-repeat center;
         position: absolute 50% 50%;
         size: 60% 18%;
         transform: translate3d(-50%, -80%, 0);
@@ -211,7 +211,7 @@
     &-scroller {
         animation: CFN-Scroller 180s normal forwards ease-out;
         animation-play-state: paused;
-        background: url("../images/CFN-Thumb-BG.jpg") repeat-x;
+        background: url("../images/cfn/thumb/BG.jpg") repeat-x;
         background-size: contain;
         filter: grayscale(0.3) brightness(0.6);
         position: absolute;
@@ -230,7 +230,7 @@
 
     &-bg {
         @mixin project-thumbnail-bg;
-        background: url("../images/Macys-Thumb-BG.png");
+        background: url("../images/macys/thumb/BG.png");
         background-size: cover;
         transition: all 0.3s ease-out-quint;
         transform: scale(1.1);
@@ -241,7 +241,7 @@
     &:hover &-bg { transform: scale(1.1); }
 
     &-star {
-        background: url("../images/Macys-Thumb-Star.svg") no-repeat center;
+        background: url("../images/macys/thumb/Star.png") no-repeat center;
         background-size: contain;
         position: absolute 42% 0 0 21%;
         size: 4% 7%;
@@ -260,7 +260,7 @@
     }
 
     &-tooltip {
-        background: url("../images/Macys-Thumb-Tooltip.png") no-repeat center;
+        background: url("../images/macys/thumb/Tooltip.png") no-repeat center;
         background-size: contain;
         position: absolute 50% 50%;
         size: 65% 38%;
@@ -285,7 +285,7 @@
 
     &-bg {
         @mixin project-thumbnail-bg;
-        background: url("../images/Recipes-Thumb-BG.jpg");
+        background: url("../images/recipes/thumb/BG.jpg");
         background-size: cover;
         transition: all 0.3s ease-out-quint;
     }
@@ -301,7 +301,7 @@
     }
 
     &-logoMark {
-        background: url("../images/Recipes-Thumb-Logo.svg") no-repeat center;
+        background: url("../images/recipes/thumb/LogoMark.svg") no-repeat center;
         background-size: contain;
         position: absolute 50% 50%;
         size: 70%;
@@ -311,7 +311,7 @@
     }
 
     &-logoType {
-        background: url("../images/Recipes-Thumb-LogoType.svg") no-repeat center;
+        background: url("../images/recipes/thumb/LogoType.svg") no-repeat center;
         background-size: contain;
         position: absolute 50% 50%;
         size: 40% 20%;
