--- a/lib/css/components.project.cfn.pcss
+++ b/lib/css/components.project.cfn.pcss
@@ -1,4 +1,7 @@
-.Header--CFN.is-scrolled h1 { color: #88815e; }
+.Header--CFN.is-scrolled {
+    h1 { color: $cfnapa-green; }
+    .Nav-item { border-bottom: 4px solid $cfnapa-green; }
+}
 
 .Project-hero--CFN::before {
     background: url("../images/cfn/case/Hero-BG.jpg") no-repeat center;
