--- a/lib/css/components.project.macys.pcss
+++ b/lib/css/components.project.macys.pcss
@@ -1,4 +1,7 @@
-.Header--Macys.is-scrolled h1 { color: #e01a2b; }
+.Header--Macys.is-scrolled {
+    h1 { color: $macys-red; }
+    .Nav-item { border-bottom: 4px solid $macys-red; }
+}
 
 .Project-hero--Macys::before {
     background: #fff url("../images/macys/case/Hero-BG.jpg") no-repeat center;
