--- a/lib/css/components.project.registration.pcss
+++ b/lib/css/components.project.registration.pcss
@@ -1,4 +1,8 @@
-.Header--Registration.is-scrolled h1 { color: #007861; }
+.Header--Registration.is-scrolled {
+    h1 { color: $csu-green; }
+    .Nav-item { border-bottom: 4px solid $csu-green; }
+}
+
 
 .Project-hero--Registration {
     position: absolute 0;
