--- a/lib/css/components.projectgrid.pcss
+++ b/lib/css/components.projectgrid.pcss
@@ -241,7 +241,7 @@
     &:hover &-bg { transform: scale(1.1); }
 
     &-star {
-        background: url("../images/macys/thumb/Star.png") no-repeat center;
+        background: url("../images/macys/thumb/Star.svg") no-repeat center;
         background-size: contain;
         position: absolute 42% 0 0 21%;
         size: 4% 7%;
