--- a/lib/css/settings.colors.pcss
+++ b/lib/css/settings.colors.pcss
@@ -2,3 +2,6 @@ $color-link: #696969;
 $color-link-hover: #222;
 
 $pr-orange: #f58220;
+$csu-green: #007861;
+$macys-red: #e01a2b;
+$cfnapa-green: #88815e;
