Add image expand functionality for mocks.

--- a/lib/css/elements.page.pcss
+++ b/lib/css/elements.page.pcss
@@ -2,6 +2,13 @@ body {
     font: $ts0/1 $sans-serif;
     font-feature-settings: "kern", "liga";
     -webkit-backface-visibility:hidden;
+
+    &.modalOpen { overflow: hidden; }
 }
 
 figcaption { font: 300 $ts0/1 $sans-serif; }
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
